Ajout du tableau des citations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="styles.css"/>
 </head> 
 <body>
+    <section id="container">
+        <div id="afficheur">
+            <div id="citation">
+                <p>CITATION</p>
+            </div>
+            <div id="auteur">
+                <p>Auteur</p>
+            </div>
+        </div>
+        <div class="newCitation">
+            <button id="btnNew">Nouvelle citation</button>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
