Step6 - Mise a jour du contenu

--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     <link rel="stylesheet" href="styles.css"/>
 </head> 
 <body>
-    <section id="container">
-        <div id="afficheur">
+   <div id="container">
+        <div id="blocCitation">
             <div id="citation">
-                <p>CITATION</p>
+                <p>Citation</p>
             </div>
             <div id="auteur">
                 <p>Auteur</p>
             </div>
         </div>
-        <div class="newCitation">
-            <button id="btnNew">Nouvelle citation</button>
-        </div>
-    </section>
+        <div id="btn">Generer une citation</div>
+   </div>
     <script src="script.js"></script>
 </body>
 </html>
