cèst la merde la

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <section id="container">
         <div id="afficheur">
-            <div id="citation">
-                <p>CITATION</p>
+            <div id="conteneurCitation">
+                <p id="citation"></p>
             </div>
             <div id="auteur">
-                <p>Auteur</p>
+
             </div>
         </div>
         <div class="newCitation">
