--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generateur de citation</title>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head> 
 <body>
    <div id="container">
@@ -17,7 +20,7 @@
                 <p>Auteur</p>
             </div>
         </div>
-        <div id="btn">Generer une citation</div>
+        <div id="btn">Générer une citation</div>
    </div>
     <script src="script.js"></script>
 </body>
