--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
 <body>
    <div id="container">
         <div id="blocCitation">
-            <div id="citation">
-                <p>Citation</p>
-            </div>
-            <div id="auteur">
-
-            </div>
+            <div id="citation"></div>
+            <div id="auteur"></div>
         </div>
         <div id="btn">Générer une citation</div>
    </div>
